data/derived/comb/progs/unify/prog0484.ml.out
Characters 73-85:
  | _ -> bigAdd ( (bigAdd l l) (mulByDigit (i-2) l) );;
                  ^^^^^^^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
